# msvc-bench

./: Cargo.toml  README.md
user-svc/: Cargo.toml  Dockerfile
user-svc/src/: main.rs
user-svc/src/api/: mod.rs
user-svc/src/traits/: mod.rs
user-svc/tests/: common.rs
