[package]
name = "user-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.10"
tower = "0.4.13"
serde = { version="1.0.137" , features = ["derive"] }
hyper = { version="0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0"